# CSC2020-USTC-FlammingMyCompiler

./: CMakeLists.txt  README.md
include/CodeGen/: Analyzer.hh  CodeGen.hh  InstructionsGen.hh
include/HIR/: AccumulatePattern.h  BBExps.h  LoopMerge.h
include/IR/: BaseBlock.h  BasicBlock.h  Constant.h  Function.h  GlobalVariable.h  HighBlock.h  IRBuilder.h  Instruction.h  Module.h  Type.h  User.h  Value.h
include/IRBuilder/: SYSYCBuilder.h
include/OptimizePass/: ActiveVars.h  BBCommonSubExper.h  BBConstPropagation.h  BranchMerge.h  CondSimplify.h  ConstFlod.h  ConstLoopExpansion.h  ControlTree.h  DeadCodeEliminate.h  Dominators.h  FunctionInline.h  FunctionOptimization.h  GlobalVariableLocal.h  HIRToMIR.h  HighIRsimplyCFG.h  IRCheck.h  InstructionSchedule.h  LoopFind.h  LoopInvariant.h  LowerIR.h  MergeCond.h  Multithreading.h  PassManager.h  PowerArray.h  ReachDefinitions.h  RefactorPartIns.h  RegisterAllocation.h  ReturnVal.h  SimplifyCFG.h  SparseCondConstPropagation.h  Vectorization.h  mem2reg.h
include/front/: FlexLexer.h  location.hh  position.hh  stack.hh  sysyFlexLexer.hh  sysy_driver.hh  sysy_parser.hh
include/syntax_tree/: syntax_tree.hh
src/: main.cc
src/CodeGen/: Analyzer.cc  CMakeLists.txt  CodeGen.cc  InstructionsGen.cc  RegAlloc.cc
src/HIR/: AccumulatePattern.cc  BBExps.cc  LoopMerge.cc
src/IR/: BaseBlock.cc  BasicBlock.cc  CMakeLists.txt  Constant.cc  Function.cc  GlobalVariable.cc  Instruction.cc  Module.cc  Type.cc  User.cc  Value.cc
src/IRBuilder/: CMakeLists.txt  SYSYCBuilder.cc  monkeyType.cc
src/OptimizePass/: ActiveVars.cc  BBCommonSubExper.cc  BBConstPropagation.cc  BranchMerge.cc  CMakeLists.txt  CondSimplify.cc  ConstFlod.cc  ConstLoopExpansion.cc  DeadCodeEliminate.cc  Dominators.cc  FunctionInline.cc  FunctionOptimization.cc  GlobalVariableLocal.cc  HIRToMIR.cc  HighIRsimplyCFG.cc  IRCheck.cc  InstructionSchedule.cc  LoopFind.cc  LoopInvariant.cc  LowerIR.cc  MergeCond.cc  Multithreading.cc  PowerArray.cc  ReachDefinitions.cc  RefactorPartIns.cc  RegisterAllocation.cc  SimplifyCFG.cc  Vectorization.cc  mem2reg.cc
src/front/: CMakeLists.txt  sysy.cc.bak  sysy_driver.cc  sysy_parser.cc  sysy_scanner.cc
src/syntax_tree/: CMakeLists.txt  syntax_tree.cc
